Sun Nov  9 04:10:19 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_dump.c (control_frame_dump): suppresses finished method name.

Sun Nov  9 00:30:52 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (thread_timer): checks working flags again.

Sun Nov  9 00:02:01 2008  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/session/pstore.rb: fix indentation.

Sat Nov  8 23:47:45 2008  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/session.rb (FileStore): use marshalized data.

	* test/cgi/session_dir: add a session directory in test.

	* test/cgi/test_cgi_session.rb: add a test. 

Sat Nov  8 21:57:03 2008  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/session.rb: remove debug code. 

Sat Nov  8 21:33:53 2008  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/session.rb: fix indentation. 

Sat Nov  8 18:11:14 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/webrick/httpproxy.rb (WEBrick::HTTPProxyServer#do_CONNECT):
	  use #bytesize instead of #size.  a patch submitted from
	  raspberry lemon in  [ruby-core:18571].

	* lib/webrick/httpauth/digestauth.rb, lib/webrick/httpproxy.rb,
	  lib/webrick/httprequest.rb, lib/webrick/httpservlet/cgi_runner.rb,
	  lib/webrick/httpservlet/abstract.rb, lib/webrick/httpresponse.rb,
	  lib/webrick/httpservlet/cgihandler.rb, lib/webrick/utils.rb: ditto.

Sat Nov  8 17:31:41 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/stringio/stringio.c (strio_ungetc): ungetc position should
	  not be changed from 1.8.   [ruby-core:19632]

Sat Nov  8 17:15:08 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/optparse.rb (OptionParser#make_switch): 1.9 Symbols respond
	  to :match.  a patch from keith cascio, <keith at ucla.edu>.
	  [ruby-core:19730]

Sat Nov  8 12:10:15 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/gdbm/gdbm.c (fgdbm_index): make #index warn like Hash.
	  [ruby-dev:37039]

	* ext/sdbm/init.c (Init_sdbm): typo fixed.  [ruby-dev:37039]
